--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,214 @@
-<!DOCTYPE html>
+{% load static %}
+
+
+<!DOCTYPE html> <!---->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    {% block title %}
 
-     {% endblock %}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DOPOMOGARAZOM</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="{%  static 'css/modern-business.css' %}" rel="stylesheet">
+
+    {% block css %}
+    {% endblock %}
+
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{%  static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/carousel.js' %}"></script>
+    {% block js %}
+    {% endblock %}
+
 </head>
 <body>
+{% if logged_in %}
+
+       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">VOLONTER</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="about.html">Організації</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Події</a>
+                    </li>
+
+                    <li>
+                        <a href="search.html">Пошук</a>
+                    </li>
+
+                    </li>
+                    <li>
+                        <a href="user_outside.html"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+{% else %}
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">VOLONTER</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="about.html">Організації</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Події</a>
+                    </li>
+
+                    <li>
+                        <a href="search.html">Пошук</a>
+                    </li>
+
+                    </li>
+
+                    <li>
+                        <a href="enter.html"><span class="glyphicon glyphicon-user"></span>Увійти</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Зареєструватись</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+{% endif %}
+
 {% block content %}
 
 {% endblock %}
+
+{% if logged_in %}
+
+    <footer>
+    <div class="container text-center">
+    <hr />
+  <div class="row ">
+    <div class="col-lg-12">
+      <div class="col-md-3">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="#">Про нас</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="#">Наша команда</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="#">Допомогти</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <ul>
+          <!-- <div class="col-sm-3"> -->
+                    <div class="col-md-12">
+                    <ul class="social-network social-circle">
+                        <a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a>
+                        <a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a>
+                        <a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+                      </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+    <div class="row">
+        <div class="col-lg-12">
+            <ul class="nav nav-pills nav-justified">
+                <!-- <conter> -->
+                <li><a href="/">© 2017 Lviv_Volunteers.</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+</footer>
+
+{% else %}
+<footer>
+    <div class="container text-center">
+    <hr />
+  <div class="row ">
+    <div class="col-lg-12">
+      <div class="col-md-3">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="#">Про нас</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="#">Наша команда</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="#">Допомогти</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <ul>
+          <!-- <div class="col-sm-3"> -->
+                    <div class="col-md-12">
+                    <ul class="social-network social-circle">
+                        <a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a>
+                        <a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a>
+                        <a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+                      </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+    <div class="row">
+        <div class="col-lg-12">
+            <ul class="nav nav-pills nav-justified">
+                <!-- <conter> -->
+                <li><a href="/">© 2017 Lviv_Volunteers.</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+    </footer>
+{% endif %}
+
 </body>
 </html>
