--- a/templates/base.html
+++ b/templates/base.html
@@ -48,19 +48,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Організації</a>
+                        <a href="/not_available/">Організації</a>
                     </li>
                     <li>
-                        <a href="about.html">Події</a>
+                        <a href="/not_available/">Події</a>
                     </li>
 
                     <li>
-                        <a href="search.html">Пошук</a>
+                        <a href="/not_available/">Пошук</a>
                     </li>
 
                     </li>
                     <li>
-                        <a href="user_outside.html"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
+                        <a href="/not_available/"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
                     </li>
                       <li>
                         <a href="logout/"><span class="glyphicon glyphicon-user"></span>Вийти</a>
@@ -83,7 +83,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
+                <a class="navbar-brand" href="/not_available/"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -105,7 +105,7 @@
                         <a href="/enter/"><span class="glyphicon glyphicon-user"></span>Увійти</a>
                     </li>
                     <li>
-                        <a href="contact.html">Зареєструватись</a>
+                        <a href="/not_available/">Зареєструватись</a>
                     </li>
                 </ul>
             </div>
