--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 {#<link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
     <link href="{%  static 'css/main-style.css' %}" rel="stylesheet">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     {% block css %}
